fixing image name to lininoIO

--- a/.config
+++ b/.config
@@ -2778,7 +2778,7 @@ CONFIG_KMOD_MMC_OVER_GPIO_DI_PIN=1
 CONFIG_KMOD_MMC_OVER_GPIO_DO_PIN=3
 CONFIG_KMOD_MMC_OVER_GPIO_CLK_PIN=4
 CONFIG_KMOD_MMC_OVER_GPIO_CS_PIN=7
-CONFIG_PACKAGE_kmod-mtdtests=m
+# CONFIG_PACKAGE_kmod-mtdtests is not set
 # CONFIG_PACKAGE_kmod-pps is not set
 # CONFIG_PACKAGE_kmod-pps-gpio is not set
 # CONFIG_PACKAGE_kmod-ptp is not set
