updating bluez, node-sqlite; adding linino mirror for sources

--- a/package/linino/imagemagick/Makefile
+++ b/package/linino/imagemagick/Makefile
@@ -9,13 +9,13 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=imagemagick
 PKG_VERSION:=6.9.2
-PKG_REVISION:=4
+PKG_REVISION:=5
 PKG_RELEASE:=1
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/ImageMagick-$(PKG_VERSION)-$(PKG_REVISION)
 PKG_SOURCE:=ImageMagick-$(PKG_VERSION)-$(PKG_REVISION).tar.bz2
 PKG_SOURCE_URL:=ftp://ftp.fifi.org/pub/ImageMagick/
-# PKG_MD5SUM:=c66bea4710370b2e115aed512fbe4601
+PKG_MD5SUM:=eeddb978615122c73a9e0df703fd6d12
 
 PKG_FIXUP:=autoreconf
 PKG_REMOVE_FILES:=aclocal.m4 m4/libtool.m4
