--- a/.config
+++ b/.config
@@ -4850,7 +4850,7 @@ CONFIG_PACKAGE_ssmtp=m
 # Streaming
 #
 # CONFIG_PACKAGE_oggfwd is not set
-CONFIG_PACKAGE_crtmpserver=m
+# CONFIG_PACKAGE_crtmpserver is not set
 CONFIG_PACKAGE_ffmpeg=m
 CONFIG_PACKAGE_ffprobe=m
 CONFIG_PACKAGE_ffserver=m
