--- a/package/linino/node-sqlite/Makefile
+++ b/package/linino/node-sqlite/Makefile
@@ -4,12 +4,12 @@ include $(TOPDIR)/rules.mk
 
 PKG_NPM_NAME:=sqlite3
 PKG_NAME:=node-$(PKG_NPM_NAME)
-PKG_VERSION:=2.2.7
+PKG_VERSION:=3.1.1
 PKG_RELEASE:=3
 
 PKG_SOURCE:=$(PKG_NPM_NAME)-$(PKG_VERSION).tgz
 PKG_SOURCE_URL:=http://registry.nodejitsu.com/$(PKG_NPM_NAME)/-/
-PKG_MD5SUM:=290e0f3a13df7d9aaeb6b60296314c61
+# PKG_MD5SUM:=290e0f3a13df7d9aaeb6b60296314c61
 
 PKG_BUILD_DEPENDS:=node
 PKG_NODE_VERSION:=0.10.38
