updating node Makefile

--- a/package/linino/node/Makefile
+++ b/package/linino/node/Makefile
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2014 DogHunter LLC
+# Copyright (C) 2015 DogHunter AG
 #
 # This is free software, licensed under the GNU General Public License v2.
 # See /LICENSE for more information.
@@ -16,8 +16,10 @@ PKG_SOURCE_URL:=http://nodejs.org/dist/${PKG_VERSION}
 PKG_MD5SUM:=3f45f994f1f02736576bf7bff1870897
 
 PKG_BUILD_PARALLEL:=3
-PKG_BUILD_DEPENDS:=v8m-rb
+PKG_BUILD_DEPENDS:=v8m-rb +python/host
 PKG_V8_VERSION:=3.14.5
+
+PKG_INSTALL:=1
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -34,14 +36,32 @@ define Package/node/description
  Node.js is a platform built on Chrome's JavaScript runtime for easily building fast, scalable network applications. Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient, perfect for data-intensive real-time applications that run across distributed devices.
 endef
 
+NODEJS:=node-$(PKG_VERSION)-linux-x64.tar.gz
+
+# Distribution URL doesn't always have the correct version
+# Using the OpenWrt/Linino mirror provides a stable version
+define Download/nodebin
+  URL:=https://nodejs.org/dist/$(PKG_VERSION)/
+  FILE:=$(NODEJS)
+  MD5SUM:=8893f1f5ce16c612ba2805432edc0138
+endef
+
+# Fetch latest nodejs that works
+# Yes, I know this is ugly
+define Build/Prepare
+    $(call Build/Prepare/Default)
+	$(eval $(call Download,nodebin))
+	$(TAR) -xvf $(DL_DIR)/$(NODEJS) -C $(STAGING_DIR_HOST) --strip-components=1
+endef
+
+define Build/InstallDev
+	$(INSTALL_DIR) $(1)/usr/include
+	$(CP) $(PKG_INSTALL_DIR)/usr/include/* $(1)/usr/include/
+endef
+
 define Build/Configure
 	(cd $(PKG_BUILD_DIR); \
-	CC="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-gcc" \
-	CXX="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-g++" \
-	AR="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-ar" \
-	RANLIB="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-ranlib" \
-	LD="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-g++" \
-	LINK="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-g++" \
+	$(MAKE_FLAGS) \
 	PATH="/usr/bin/:$(PATH)" \
 	GYPFLAGS="-Dv8_use_mips_abi_hardfloat=false -Dv8_can_use_fpu_instructions=false" \
 	LDFLAGS="-L$(TOOLCHAIN_DIR)/lib/ -Wl,-rpath-link $(TOOLCHAIN_DIR)/lib/" \
@@ -50,12 +70,7 @@ define Build/Configure
 endef
 
 define Build/Compile
-	CC="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-gcc" \
-	CXX="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-g++" \
-	AR="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-ar" \
-	RANLIB="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-ranlib" \
-	LD="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-g++" \
-	LINK="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-g++" \
+	$(MAKE_FLAGS) \
 	PATH="/usr/bin/:$(PATH)" \
 	GYPFLAGS="-Dv8_use_mips_abi_hardfloat=false -Dv8_can_use_fpu_instructions=false" \
 	LDFLAGS="-L$(TOOLCHAIN_DIR)/lib/ -Wl,-rpath-link $(TOOLCHAIN_DIR)/lib/" \
