--- a/package/linino/linino-scripts/Makefile
+++ b/package/linino/linino-scripts/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=linino-scripts
 PKG_VERSION:=1.4
-PKG_RELEASE:=2
+PKG_RELEASE:=3
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -60,6 +60,7 @@ define Package/linino-scripts/install
 	$(INSTALL_BIN) ./files/usr/bin/flash-samd21 $(1)/usr/bin
 	$(INSTALL_BIN) ./files/usr/bin/flash-kl25z $(1)/usr/bin
 	$(INSTALL_BIN) ./files/usr/bin/linup $(1)/usr/bin
+	$(INSTALL_BIN) ./files/usr/bin/overlay-only $(1)/usr/bin
 
 	$(INSTALL_BIN) ./files/etc/init.d/rename-wifi-if-access-point $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/generate_new_gpg_key $(1)/etc/init.d
