--- a/.config
+++ b/.config
@@ -2804,6 +2804,7 @@ CONFIG_PACKAGE_kmod-spi-dev=y
 CONFIG_PACKAGE_kmod-spi-gpio=y
 CONFIG_PACKAGE_kmod-spi-gpio-custom=m
 CONFIG_PACKAGE_kmod-spi-gpio-old=m
+CONFIG_PACKAGE_kmod-spi-tty-plain=m
 # CONFIG_PACKAGE_kmod-spi-vsc7385 is not set
 
 #
