fixing URL for default repository

--- a/.config
+++ b/.config
@@ -466,7 +466,7 @@ CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="LininoIO"
 CONFIG_VERSION_NICK="chaos_calmer"
 CONFIG_VERSION_NUMBER="2.0"
-CONFIG_VERSION_REPO="http://download.linino.org/linino_distro/linino-2.0/latest/packages"
+CONFIG_VERSION_REPO="http://download.linino.org/linino_distro/linino-2.0/lininoIO/latest/packages"
 CONFIG_VERSION_MANUFACTURER="Linino.org"
 CONFIG_VERSION_PRODUCT=""
 CONFIG_VERSION_HWREV=""
