--- a/.config
+++ b/.config
@@ -5548,6 +5548,7 @@ CONFIG_PACKAGE_apache=m
 # CONFIG_PACKAGE_haproxy is not set
 # CONFIG_PACKAGE_haproxy-nossl is not set
 # CONFIG_PACKAGE_lighttpd is not set
+CONFIG_PACKAGE_monkey=m
 # CONFIG_PACKAGE_nginx is not set
 CONFIG_PACKAGE_polipo=m
 # CONFIG_PACKAGE_privoxy is not set
