new package : corkscrew v2.0

--- a/.config
+++ b/.config
@@ -5238,6 +5238,7 @@ CONFIG_PACKAGE_tc=m
 #
 # SSH
 #
+CONFIG_PACKAGE_corkscrew=m
 CONFIG_PACKAGE_openssh-client=m
 CONFIG_PACKAGE_openssh-client-utils=m
 CONFIG_PACKAGE_openssh-keygen=m
