first modification for SAMD branch

--- a/package/linino/linino-conf/Makefile
+++ b/package/linino/linino-conf/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=linino-conf
 PKG_VERSION:=1.0
-PKG_RELEASE:=6
+PKG_RELEASE:=7
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -65,11 +65,11 @@ define Package/linino-conf/install
 	# $(INSTALL_CONF) ./files/etc/config/mcuiocfg $(1)/etc/config/
 	
 	# /etc/arduino DIR
-	$(INSTALL_DATA) ./files/etc/arduino/Caterina-Yun.hex $(1)/etc/arduino/
-	$(INSTALL_DATA) ./files/etc/arduino/Caterina-YunMini.hex $(1)/etc/arduino/
-	$(INSTALL_DATA) ./files/etc/arduino/Caterina-One.hex $(1)/etc/arduino/
-	$(INSTALL_DATA) ./files/etc/arduino/Caterina-Lei.hex $(1)/etc/arduino/
-	$(INSTALL_DATA) ./files/etc/arduino/Caterina-Chiwawa.hex $(1)/etc/arduino/
+	# $(INSTALL_DATA) ./files/etc/arduino/Caterina-Yun.hex $(1)/etc/arduino/
+	# $(INSTALL_DATA) ./files/etc/arduino/Caterina-YunMini.hex $(1)/etc/arduino/
+	# $(INSTALL_DATA) ./files/etc/arduino/Caterina-One.hex $(1)/etc/arduino/
+	# $(INSTALL_DATA) ./files/etc/arduino/Caterina-Lei.hex $(1)/etc/arduino/
+	# $(INSTALL_DATA) ./files/etc/arduino/Caterina-Chiwawa.hex $(1)/etc/arduino/
 	$(INSTALL_DATA) ./files/etc/arduino/Sofia-Tian.hex $(1)/etc/arduino/
 	$(INSTALL_DATA) ./files/etc/arduino/linino-arduino-release $(1)/etc/arduino/
 	$(INSTALL_DATA) ./files/etc/arduino/gpg_gen_key_batch $(1)/etc/arduino/
@@ -81,18 +81,18 @@ define Package/linino-conf/install
 	# /etc/linino DIR
 	$(INSTALL_DATA) ./files/etc/linino/prog_console.sh $(1)/etc/linino/
 	$(INSTALL_DATA) ./files/etc/linino/test_avrdude.sh $(1)/etc/linino/
-	$(INSTALL_DATA) ./files/etc/linino/FirmataSPI.hex $(1)/etc/linino/
-	$(INSTALL_DATA) ./files/etc/linino/LininoOneSerialTerminal.hex $(1)/etc/linino
-	$(INSTALL_DATA) ./files/etc/linino/YunSerialTerminal.hex $(1)/etc/linino/
-	$(INSTALL_DATA) ./files/etc/linino/LeiSerialTerminal.hex $(1)/etc/linino/
-	$(INSTALL_DATA) ./files/etc/linino/YunMiniSerialTerminal.hex $(1)/etc/linino/
+	# $(INSTALL_DATA) ./files/etc/linino/FirmataSPI.hex $(1)/etc/linino/
+	# $(INSTALL_DATA) ./files/etc/linino/LininoOneSerialTerminal.hex $(1)/etc/linino
+	# $(INSTALL_DATA) ./files/etc/linino/YunSerialTerminal.hex $(1)/etc/linino/
+	# $(INSTALL_DATA) ./files/etc/linino/LeiSerialTerminal.hex $(1)/etc/linino/
+	# $(INSTALL_DATA) ./files/etc/linino/YunMiniSerialTerminal.hex $(1)/etc/linino/
 	$(INSTALL_DATA) ./files/etc/linino/mips-onoff-tian.hex $(1)/etc/linino/
 
 	# /etc/linino DIR (bathos firmware)
-	$(INSTALL_DATA) ./files/etc/linino/bathos-one.hex $(1)/etc/linino
-	$(INSTALL_DATA) ./files/etc/linino/bathos-yun.hex $(1)/etc/linino/
-	$(INSTALL_DATA) ./files/etc/linino/bathos-lei.hex $(1)/etc/linino/
-	$(INSTALL_DATA) ./files/etc/linino/bathos-yun-mini.hex $(1)/etc/linino/
+	# $(INSTALL_DATA) ./files/etc/linino/bathos-one.hex $(1)/etc/linino
+	# $(INSTALL_DATA) ./files/etc/linino/bathos-yun.hex $(1)/etc/linino/
+	# $(INSTALL_DATA) ./files/etc/linino/bathos-lei.hex $(1)/etc/linino/
+	# $(INSTALL_DATA) ./files/etc/linino/bathos-yun-mini.hex $(1)/etc/linino/
 	$(INSTALL_DATA) ./files/etc/linino/fuses.txt $(1)/etc/linino/
 	$(INSTALL_DATA) ./files/etc/linino/LININO_CONTRIBUTORS.txt $(1)/etc/linino/
 endef
