--- a/.config
+++ b/.config
@@ -116,7 +116,7 @@ CONFIG_TARGET_ar71xx_generic=y
 # CONFIG_TARGET_ar71xx_generic_JA76PF is not set
 # CONFIG_TARGET_ar71xx_generic_JA76PF2 is not set
 # CONFIG_TARGET_ar71xx_generic_JWAP003 is not set
-CONFIG_TARGET_ar71xx_generic_LININO=y
+# CONFIG_TARGET_ar71xx_generic_LININO is not set
 # CONFIG_TARGET_ar71xx_generic_LININO_YUNONE is not set
 # CONFIG_TARGET_ar71xx_generic_LININO_YUNONELEI is not set
 # CONFIG_TARGET_ar71xx_generic_LININO_AVR is not set
@@ -124,7 +124,7 @@ CONFIG_TARGET_ar71xx_generic_LININO=y
 # CONFIG_TARGET_ar71xx_generic_LININO_ONE is not set
 # CONFIG_TARGET_ar71xx_generic_LININO_FREEDOG is not set
 # CONFIG_TARGET_ar71xx_generic_LININO_LEI is not set
-# CONFIG_TARGET_ar71xx_generic_LININO_TIAN is not set
+CONFIG_TARGET_ar71xx_generic_LININO_TIAN=y
 # CONFIG_TARGET_ar71xx_generic_LININO_CHIWAWA is not set
 # CONFIG_TARGET_ar71xx_generic_LININO_YUN_MINI is not set
 # CONFIG_TARGET_ar71xx_generic_WRT160NL is not set
@@ -226,26 +226,15 @@ CONFIG_DEFAULT_ip6tables=y
 CONFIG_DEFAULT_iptables=y
 CONFIG_DEFAULT_iwinfo=y
 CONFIG_DEFAULT_kmod-ath9k=y
-CONFIG_DEFAULT_kmod-fs-ext4=y
-CONFIG_DEFAULT_kmod-fs-msdos=y
-CONFIG_DEFAULT_kmod-fs-ntfs=y
-CONFIG_DEFAULT_kmod-fs-vfat=y
 CONFIG_DEFAULT_kmod-gpio-button-hotplug=y
-CONFIG_DEFAULT_kmod-ledtrig-usbdev=y
 CONFIG_DEFAULT_kmod-nf-nathelper=y
-CONFIG_DEFAULT_kmod-nls-cp437=y
-CONFIG_DEFAULT_kmod-nls-cp850=y
-CONFIG_DEFAULT_kmod-nls-cp852=y
-CONFIG_DEFAULT_kmod-nls-iso8859-1=y
-CONFIG_DEFAULT_kmod-nls-utf8=y
 CONFIG_DEFAULT_kmod-usb-core=y
-CONFIG_DEFAULT_kmod-usb-ohci=y
-CONFIG_DEFAULT_kmod-usb-storage=y
 CONFIG_DEFAULT_kmod-usb2=y
 CONFIG_DEFAULT_libc=y
 CONFIG_DEFAULT_libgcc=y
 CONFIG_DEFAULT_linino-conf=y
 CONFIG_DEFAULT_linino-scripts=y
+CONFIG_DEFAULT_luci-webpanel-linino=y
 CONFIG_DEFAULT_mtd=y
 CONFIG_DEFAULT_netifd=y
 CONFIG_DEFAULT_odhcp6c=y
@@ -467,7 +456,7 @@ CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="LininoIO"
 CONFIG_VERSION_NICK="chaos_calmer"
 CONFIG_VERSION_NUMBER="2.0"
-CONFIG_VERSION_REPO="http://download.linino.org/linino_distro/linino-2.0/lininoIO/latest/packages"
+CONFIG_VERSION_REPO="http://download.linino.org/linino_distro/linino-2.0/samd/latest/packages"
 CONFIG_VERSION_MANUFACTURER="Linino.org"
 CONFIG_VERSION_PRODUCT=""
 CONFIG_VERSION_HWREV=""
@@ -3760,12 +3749,12 @@ CONFIG_PACKAGE_libgdbm=y
 CONFIG_PACKAGE_libgmp=m
 CONFIG_PACKAGE_libgpg-error=y
 # CONFIG_PACKAGE_libhamlib is not set
-CONFIG_PACKAGE_hidapi=m
+CONFIG_PACKAGE_hidapi=y
 # CONFIG_PACKAGE_ibrcommon is not set
 # CONFIG_PACKAGE_ibrdtn is not set
 # CONFIG_PACKAGE_libhttp-parser is not set
 CONFIG_PACKAGE_libical=m
-CONFIG_PACKAGE_libiconv=m
+CONFIG_PACKAGE_libiconv=y
 CONFIG_PACKAGE_libiconv-full=m
 CONFIG_PACKAGE_libicu=m
 CONFIG_PACKAGE_libid3tag=m
@@ -5952,7 +5941,7 @@ CONFIG_PACKAGE_zoneinfo-southamerica=m
 CONFIG_PACKAGE_alsa-utils=m
 CONFIG_PACKAGE_alsa-utils-seq=m
 CONFIG_PACKAGE_alsa-utils-tests=m
-CONFIG_PACKAGE_avrdude=y
+CONFIG_PACKAGE_avrdude=m
 CONFIG_PACKAGE_bash=m
 # CONFIG_PACKAGE_bc is not set
 CONFIG_PACKAGE_bluez-daemon=m
@@ -6284,7 +6273,7 @@ CONFIG_PACKAGE_oled-utils=m
 # CONFIG_PACKAGE_open-plc-utils is not set
 CONFIG_PACKAGE_openldap-utils=m
 CONFIG_PACKAGE_openobex=m
-CONFIG_PACKAGE_openocd=m
+CONFIG_PACKAGE_openocd=y
 # CONFIG_PACKAGE_opensc-utils is not set
 CONFIG_PACKAGE_openssl-util=m
 # CONFIG_PACKAGE_opus-tools is not set
