--- a/.config
+++ b/.config
@@ -415,7 +415,7 @@ CONFIG_TARGET_ROOTFS_DIR=""
 CONFIG_EXTERNAL_KERNEL_TREE=""
 CONFIG_KERNEL_GIT_CLONE_URI="http://github.com/linino/linux.git"
 CONFIG_KERNEL_GIT_LOCAL_REPOSITORY=""
-CONFIG_KERNEL_GIT_BRANCH="tmp-linux-3.18.11-150605"
+CONFIG_KERNEL_GIT_BRANCH="for-15.05-rc1"
 # CONFIG_BUILD_LOG is not set
 # CONFIG_SRC_TREE_OVERRIDE is not set
 CONFIG_EXTRA_OPTIMIZATION="-fno-caller-saves"
@@ -467,7 +467,7 @@ CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="LininoIO"
 CONFIG_VERSION_NICK="chaos_calmer"
 CONFIG_VERSION_NUMBER="2.0"
-CONFIG_VERSION_REPO="http://download.linino.org/linino_distro/linino-2.0/lininoIO/latest/packages"
+CONFIG_VERSION_REPO="http://download.linino.org/linino_distro/linino-2.0/avr/latest/packages"
 CONFIG_VERSION_MANUFACTURER="Linino.org"
 CONFIG_VERSION_PRODUCT=""
 CONFIG_VERSION_HWREV=""
