--- a/.config
+++ b/.config
@@ -3573,6 +3573,7 @@ CONFIG_PACKAGE_liblo=m
 #
 # CONFIG_PACKAGE_bcg729 is not set
 # CONFIG_PACKAGE_dahdi-tools-libtonezone is not set
+CONFIG_PACKAGE_libiksemel=m
 # CONFIG_PACKAGE_libortp is not set
 # CONFIG_PACKAGE_libosip2 is not set
 # CONFIG_PACKAGE_libpj is not set
@@ -3848,6 +3849,7 @@ CONFIG_PACKAGE_libpcsclite=m
 # CONFIG_PACKAGE_libplistcxx is not set
 CONFIG_PACKAGE_libpng=y
 CONFIG_PACKAGE_libpopt=m
+# CONFIG_PACKAGE_libpri is not set
 CONFIG_PACKAGE_libprotobuf-c=m
 # CONFIG_PACKAGE_libqrencode is not set
 # CONFIG_PACKAGE_libradcli is not set
@@ -3916,6 +3918,7 @@ CONFIG_PACKAGE_libwrap=m
 # CONFIG_PACKAGE_libxerces-c-samples is not set
 CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_libxslt=m
+# CONFIG_PACKAGE_libyang is not set
 # CONFIG_PACKAGE_libzdb is not set
 # CONFIG_PACKAGE_libzmq-curve is not set
 # CONFIG_PACKAGE_libzmq-nc is not set
@@ -5316,6 +5319,7 @@ CONFIG_PACKAGE_asterisk18=m
 CONFIG_PACKAGE_asterisk18-app-authenticate=m
 # CONFIG_PACKAGE_asterisk18-app-chanisavail is not set
 # CONFIG_PACKAGE_asterisk18-app-chanspy is not set
+# CONFIG_PACKAGE_asterisk18-app-dahdiras is not set
 # CONFIG_PACKAGE_asterisk18-app-directed_pickup is not set
 CONFIG_PACKAGE_asterisk18-app-disa=m
 # CONFIG_PACKAGE_asterisk18-app-exec is not set
@@ -5339,6 +5343,8 @@ CONFIG_PACKAGE_asterisk18-app-system=m
 # CONFIG_PACKAGE_asterisk18-cdr is not set
 # CONFIG_PACKAGE_asterisk18-cdr-csv is not set
 # CONFIG_PACKAGE_asterisk18-chan-agent is not set
+# CONFIG_PACKAGE_asterisk18-chan-dahdi is not set
+CONFIG_PACKAGE_asterisk18-chan-gtalk=m
 # CONFIG_PACKAGE_asterisk18-chan-iax2 is not set
 CONFIG_PACKAGE_asterisk18-chan-local=m
 # CONFIG_PACKAGE_asterisk18-chan-mgcp is not set
@@ -5347,6 +5353,7 @@ CONFIG_PACKAGE_asterisk18-chan-local=m
 # CONFIG_PACKAGE_asterisk18-chan-skinny is not set
 CONFIG_PACKAGE_asterisk18-codec-a-mu=m
 CONFIG_PACKAGE_asterisk18-codec-alaw=m
+# CONFIG_PACKAGE_asterisk18-codec-dahdi is not set
 # CONFIG_PACKAGE_asterisk18-codec-g722 is not set
 # CONFIG_PACKAGE_asterisk18-codec-g726 is not set
 # CONFIG_PACKAGE_asterisk18-codec-g729 is not set
@@ -5390,6 +5397,7 @@ CONFIG_PACKAGE_asterisk18-res-crypto=m
 # CONFIG_PACKAGE_asterisk18-res-pktccops is not set
 # CONFIG_PACKAGE_asterisk18-res-smdi is not set
 # CONFIG_PACKAGE_asterisk18-res-srtp is not set
+# CONFIG_PACKAGE_asterisk18-res-timing-dahdi is not set
 # CONFIG_PACKAGE_asterisk18-res-timing-pthread is not set
 # CONFIG_PACKAGE_asterisk18-res-timing-timerfd is not set
 # CONFIG_PACKAGE_asterisk18-sounds is not set
@@ -5434,6 +5442,7 @@ CONFIG_PACKAGE_openvpn-easy-rsa=m
 # CONFIG_PACKAGE_openvpn-nossl is not set
 # CONFIG_PACKAGE_openvpn-openssl is not set
 # CONFIG_PACKAGE_openvpn-polarssl is not set
+# CONFIG_PACKAGE_pptpd is not set
 CONFIG_PACKAGE_strongswan=m
 
 #
@@ -5913,8 +5922,6 @@ CONFIG_PACKAGE_wall=m
 # database
 #
 CONFIG_PACKAGE_mysql-server=m
-# CONFIG_PACKAGE_pgsql-cli is not set
-# CONFIG_PACKAGE_pgsql-server is not set
 CONFIG_PACKAGE_sqlite3-cli=m
 CONFIG_PACKAGE_unixodbc-tools=m
 
@@ -5953,6 +5960,8 @@ CONFIG_PACKAGE_alsa-utils=m
 CONFIG_PACKAGE_alsa-utils-seq=m
 CONFIG_PACKAGE_alsa-utils-tests=m
 CONFIG_PACKAGE_avrdude=y
+# CONFIG_PACKAGE_bandwidthd is not set
+# CONFIG_PACKAGE_bandwidthd-pgsql is not set
 CONFIG_PACKAGE_bash=m
 # CONFIG_PACKAGE_bc is not set
 CONFIG_PACKAGE_bluez-daemon=m
@@ -6367,6 +6376,7 @@ CONFIG_PACKAGE_whereis=m
 CONFIG_PACKAGE_wifitoggle=m
 CONFIG_PACKAGE_xsltproc=m
 CONFIG_PACKAGE_xxd=m
+# CONFIG_PACKAGE_yanglint is not set
 # CONFIG_PACKAGE_yunbridge is not set
 # CONFIG_PACKAGE_zsh is not set
 
