--- a/.config
+++ b/.config
@@ -3722,12 +3722,12 @@ CONFIG_PACKAGE_libdbi=m
 # CONFIG_PACKAGE_libdbd-mysql is not set
 # CONFIG_PACKAGE_libdbd-pgsql is not set
 # CONFIG_PACKAGE_libdbd-sqlite3 is not set
+CONFIG_PACKAGE_libdbus=y
 CONFIG_PACKAGE_libdevmapper=m
 # CONFIG_PACKAGE_libdmapsharing is not set
 CONFIG_PACKAGE_libdnet=m
 CONFIG_PACKAGE_libelf1=y
 CONFIG_PACKAGE_libasm=m
-CONFIG_PACKAGE_libdbus=y
 CONFIG_PACKAGE_libdw=m
 # CONFIG_PACKAGE_libesmtp is not set
 # CONFIG_PACKAGE_libev is not set
@@ -3750,7 +3750,7 @@ CONFIG_PACKAGE_libffi=y
 CONFIG_PACKAGE_libffmpeg-full=m
 # CONFIG_PACKAGE_libffmpeg-mini is not set
 CONFIG_PACKAGE_libflac=m
-CONFIG_PACKAGE_libfreecwmp=m
+# CONFIG_PACKAGE_libfreecwmp is not set
 CONFIG_PACKAGE_libfreetype=y
 CONFIG_PACKAGE_libftdi=y
 CONFIG_PACKAGE_libftdi1=y
@@ -3760,6 +3760,7 @@ CONFIG_PACKAGE_libgd=m
 CONFIG_PACKAGE_libgdbm=y
 CONFIG_PACKAGE_libgmp=m
 CONFIG_PACKAGE_libgpg-error=y
+CONFIG_PACKAGE_libgps=m
 # CONFIG_PACKAGE_libhamlib is not set
 CONFIG_PACKAGE_hidapi=m
 # CONFIG_PACKAGE_ibrcommon is not set
@@ -3788,7 +3789,7 @@ CONFIG_PACKAGE_libmad=m
 CONFIG_PACKAGE_libmagic=m
 CONFIG_PACKAGE_libmcrypt=m
 # CONFIG_PACKAGE_libmicrohttpd is not set
-CONFIG_PACKAGE_libmicroxml=m
+# CONFIG_PACKAGE_libmicroxml is not set
 CONFIG_PACKAGE_libminiupnpc=m
 CONFIG_PACKAGE_libmms=m
 CONFIG_PACKAGE_libmnl=m
@@ -5630,6 +5631,8 @@ CONFIG_PACKAGE_ds-lite=m
 CONFIG_PACKAGE_etherwake=m
 CONFIG_PACKAGE_ethtool=m
 CONFIG_PACKAGE_fakeidentd=m
+CONFIG_PACKAGE_gpsd=m
+CONFIG_PACKAGE_gpsd-clients=m
 # CONFIG_PACKAGE_gre is not set
 # CONFIG_PACKAGE_hnet-full is not set
 # CONFIG_PACKAGE_hnet-full-secure is not set
@@ -5969,6 +5972,7 @@ CONFIG_PACKAGE_bluez-examples=m
 CONFIG_PACKAGE_bluez-utils=m
 CONFIG_PACKAGE_cal=m
 CONFIG_PACKAGE_ccrypt=m
+CONFIG_PACKAGE_ciao=m
 CONFIG_PACKAGE_cmdpad=m
 CONFIG_PACKAGE_collectd=m
 # CONFIG_PACKAGE_collectd-mod-apache is not set
