--- a/.config
+++ b/.config
@@ -2333,6 +2333,7 @@ CONFIG_PACKAGE_ar=m
 CONFIG_PACKAGE_arm-none-eabi-gdb=m
 CONFIG_PACKAGE_autoconf=m
 CONFIG_PACKAGE_automake=m
+CONFIG_PACKAGE_avr-toolchain=m
 CONFIG_PACKAGE_binutils=m
 CONFIG_PACKAGE_diffutils=m
 CONFIG_PACKAGE_findutils=m
@@ -3271,6 +3272,7 @@ CONFIG_PACKAGE_python-decimal=m
 CONFIG_PACKAGE_python-distutils=m
 # CONFIG_PACKAGE_python-dns is not set
 CONFIG_PACKAGE_python-email=m
+CONFIG_PACKAGE_python-expat=m
 CONFIG_PACKAGE_python-gdbm=m
 # CONFIG_PACKAGE_python-gtk is not set
 # CONFIG_PACKAGE_python-hippo-canvas is not set
@@ -3281,6 +3283,7 @@ CONFIG_PACKAGE_python-multiprocessing=m
 # CONFIG_PACKAGE_python-mysql is not set
 CONFIG_PACKAGE_python-ncurses=m
 CONFIG_PACKAGE_python-openssl=m
+CONFIG_PACKAGE_python-paho-mqtt=m
 # CONFIG_PACKAGE_python-pip is not set
 CONFIG_PACKAGE_python-pydoc=m
 CONFIG_PACKAGE_python-pyserial=m
