--- a/.config
+++ b/.config
@@ -3260,6 +3260,7 @@ CONFIG_PACKAGE_python-decimal=m
 CONFIG_PACKAGE_python-distutils=m
 # CONFIG_PACKAGE_python-dns is not set
 CONFIG_PACKAGE_python-email=m
+CONFIG_PACKAGE_python-expat=m
 CONFIG_PACKAGE_python-gdbm=m
 # CONFIG_PACKAGE_python-gtk is not set
 # CONFIG_PACKAGE_python-hippo-canvas is not set
@@ -3270,6 +3271,7 @@ CONFIG_PACKAGE_python-multiprocessing=m
 # CONFIG_PACKAGE_python-mysql is not set
 CONFIG_PACKAGE_python-ncurses=m
 CONFIG_PACKAGE_python-openssl=m
+CONFIG_PACKAGE_python-paho-mqtt=m
 # CONFIG_PACKAGE_python-pip is not set
 CONFIG_PACKAGE_python-pydoc=m
 CONFIG_PACKAGE_python-pyserial=m
@@ -5949,6 +5951,7 @@ CONFIG_PACKAGE_bluez-examples=m
 CONFIG_PACKAGE_bluez-utils=m
 CONFIG_PACKAGE_cal=m
 CONFIG_PACKAGE_ccrypt=m
+CONFIG_PACKAGE_ciao=m
 CONFIG_PACKAGE_cmdpad=m
 CONFIG_PACKAGE_collectd=m
 # CONFIG_PACKAGE_collectd-mod-apache is not set
