--- a/.config
+++ b/.config
@@ -3983,6 +3983,7 @@ CONFIG_PACKAGE_luci-mod-rpc=m
 #
 # 3. Applications
 #
+CONFIG_PACKAGE_luci-app-6lowpand=m
 CONFIG_PACKAGE_luci-app-ahcp=m
 # CONFIG_PACKAGE_luci-app-asterisk is not set
 # CONFIG_PACKAGE_luci-app-bcp38 is not set
