new package : ldattach

--- a/.config
+++ b/.config
@@ -6178,6 +6178,7 @@ CONFIG_PACKAGE_iwinfo=m
 CONFIG_PACKAGE_jpeg-tools=m
 CONFIG_PACKAGE_jshn=y
 # CONFIG_PACKAGE_kmod is not set
+CONFIG_PACKAGE_ldattach=y
 CONFIG_PACKAGE_ldconfig=m
 CONFIG_PACKAGE_ldd=m
 CONFIG_PACKAGE_less=m
