--- a/.config
+++ b/.config
@@ -3252,6 +3252,7 @@ CONFIG_PACKAGE_perlbase-xsloader=m
 # CONFIG_PACKAGE_pyqt4 is not set
 CONFIG_PACKAGE_python=m
 CONFIG_PACKAGE_python-base=y
+CONFIG_PACKAGE_python-bluez=m
 CONFIG_PACKAGE_python-codecs=m
 CONFIG_PACKAGE_python-compiler=m
 CONFIG_PACKAGE_python-ctypes=m
@@ -6358,6 +6359,7 @@ CONFIG_PACKAGE_tar=m
 # CONFIG_PACKAGE_tiff-utils is not set
 CONFIG_PACKAGE_tmux=m
 # CONFIG_PACKAGE_tracertools is not set
+CONFIG_PACKAGE_tree=m
 CONFIG_PACKAGE_triggerhappy=y
 CONFIG_PACKAGE_uboot-envtools=y
 # CONFIG_UBOOT_ENVTOOLS_UBI is not set
