--- a/.config
+++ b/.config
@@ -3051,21 +3051,22 @@ CONFIG_PACKAGE_jamvm=m
 CONFIG_PACKAGE_libiwinfo-lua=y
 # CONFIG_PACKAGE_lpeg is not set
 CONFIG_PACKAGE_lua=y
-# CONFIG_PACKAGE_lua-bencode is not set
-# CONFIG_PACKAGE_lua-copas is not set
-# CONFIG_PACKAGE_lua-coxpcall is not set
+CONFIG_PACKAGE_lua-base64=m
+CONFIG_PACKAGE_lua-bencode=m
+CONFIG_PACKAGE_lua-copas=m
+CONFIG_PACKAGE_lua-coxpcall=m
 CONFIG_PACKAGE_lua-examples=m
-# CONFIG_PACKAGE_lua-lzlib is not set
-# CONFIG_PACKAGE_lua-md5 is not set
-# CONFIG_PACKAGE_lua-mobdebug is not set
-# CONFIG_PACKAGE_lua-mosquitto is not set
-# CONFIG_PACKAGE_lua-penlight is not set
-# CONFIG_PACKAGE_lua-rings is not set
-# CONFIG_PACKAGE_lua-rs232 is not set
-# CONFIG_PACKAGE_lua-sha2 is not set
-# CONFIG_PACKAGE_lua-wsapi-base is not set
-# CONFIG_PACKAGE_lua-wsapi-xavante is not set
-# CONFIG_PACKAGE_lua-xavante is not set
+CONFIG_PACKAGE_lua-lzlib=m
+CONFIG_PACKAGE_lua-md5=m
+CONFIG_PACKAGE_lua-mobdebug=m
+CONFIG_PACKAGE_lua-mosquitto=m
+CONFIG_PACKAGE_lua-penlight=m
+CONFIG_PACKAGE_lua-rings=m
+CONFIG_PACKAGE_lua-rs232=m
+CONFIG_PACKAGE_lua-sha2=m
+CONFIG_PACKAGE_lua-wsapi-base=m
+CONFIG_PACKAGE_lua-wsapi-xavante=m
+CONFIG_PACKAGE_lua-xavante=y
 # CONFIG_PACKAGE_luabitop is not set
 CONFIG_PACKAGE_luac=m
 CONFIG_PACKAGE_luaexpat=m
@@ -3073,7 +3074,7 @@ CONFIG_PACKAGE_luafilesystem=m
 # CONFIG_PACKAGE_luai2c is not set
 # CONFIG_PACKAGE_lualanes is not set
 CONFIG_PACKAGE_luaposix=m
-# CONFIG_PACKAGE_luarocks is not set
+CONFIG_PACKAGE_luarocks=m
 CONFIG_PACKAGE_luasec=m
 CONFIG_PACKAGE_luasoap=m
 CONFIG_PACKAGE_luasocket=m
