--- a/configfiles/linino_defconfig
+++ b/configfiles/linino_defconfig
@@ -1109,7 +1109,7 @@ CONFIG_ALLOW_DEV_COREDUMP=y
 # CONFIG_GENERIC_CPU_DEVICES is not set
 CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=m
-CONFIG_REGMAP_SPI=m
+CONFIG_REGMAP_SPI=y
 CONFIG_REGMAP_MCUIO=y
 CONFIG_DMA_SHARED_BUFFER=y
 # CONFIG_FENCE_TRACE is not set
@@ -2050,7 +2050,7 @@ CONFIG_SPI_MASTER=y
 CONFIG_SPI_AP83=y
 CONFIG_SPI_ATH79=y
 CONFIG_SPI_BITBANG=y
-CONFIG_SPI_GPIO=m
+CONFIG_SPI_GPIO=y
 # CONFIG_SPI_GPIO_OLD is not set
 CONFIG_SPI_TTY_PLAIN=m
 # CONFIG_SPI_OC_TINY is not set
