--- a/package/linino/python-paho-mqtt/Makefile
+++ b/package/linino/python-paho-mqtt/Makefile
@@ -13,13 +13,7 @@ PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://pypi.python.org/packages/source/p/paho-mqtt/
-#PKG_BUILD_DIR:=$(BUILD_DIR)/SleekXMPP-$(PKG_NAME)-$(PKG_VERSION)
 PKG_MD5SUM:=
-
-# PKG_BUILD_DEPENDS:=+python-expat +python-openssl +libopenssl
-
-# TARGET_LDFLAGS += -L${STAGING_DIR}/lib \
-		-L${STAGING_DIR}/usr/lib/python2.7
 
 include $(INCLUDE_DIR)/package.mk
 $(call include_mk, python-package.mk)
@@ -30,7 +24,7 @@ define Package/python-paho-mqtt
   SUBMENU:=Python
   TITLE:=python-paho-mqtt
   URL:=http://sourceforge.net/projects/paho-mqtt
-  DEPENDS:=+python-base +python-expat +python-openssl +libopenssl
+  DEPENDS:=+python-base +python-xml +python-openssl +libopenssl
 endef
 
 define Package/python-paho-mqtt/description
