--- a/.config
+++ b/.config
@@ -6311,7 +6311,21 @@ CONFIG_PACKAGE_owipcalc=m
 CONFIG_PACKAGE_pciutils=m
 CONFIG_PACKAGE_pcscd=m
 # CONFIG_PACKAGE_pps-tools is not set
-# CONFIG_PACKAGE_procps is not set
+CONFIG_PACKAGE_procps=m
+CONFIG_PACKAGE_procps-free=m
+CONFIG_PACKAGE_procps-pgrep=m
+CONFIG_PACKAGE_procps-pkill=m
+CONFIG_PACKAGE_procps-pmap=m
+CONFIG_PACKAGE_procps-ps=m
+CONFIG_PACKAGE_procps-pwdx=m
+CONFIG_PACKAGE_procps-skill=m
+CONFIG_PACKAGE_procps-slabtop=m
+CONFIG_PACKAGE_procps-snice=m
+CONFIG_PACKAGE_procps-tload=m
+CONFIG_PACKAGE_procps-top=m
+CONFIG_PACKAGE_procps-vmstat=m
+CONFIG_PACKAGE_procps-w=m
+CONFIG_PACKAGE_procps-watch=m
 CONFIG_PACKAGE_psmisc=y
 CONFIG_PACKAGE_pv=m
 # CONFIG_PACKAGE_pwrtray-backend is not set
