disabling useless init script

--- a/package/linino/linino-scripts/Makefile
+++ b/package/linino/linino-scripts/Makefile
@@ -8,8 +8,8 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=linino-scripts
-PKG_VERSION:=1.4
-PKG_RELEASE:=9
+PKG_VERSION:=1.5
+PKG_RELEASE:=1
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -69,7 +69,7 @@ define Package/linino-scripts/install
 	$(INSTALL_BIN) ./files/etc/init.d/rngd-turn-off $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/alljoynfixboot $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/avahifixboot $(1)/etc/init.d
-	$(INSTALL_BIN) ./files/etc/init.d/board-panel $(1)/etc/init.d
+	# $(INSTALL_BIN) ./files/etc/init.d/board-panel $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/defconfig $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/defconfig-init $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/console $(1)/etc/init.d
