--- a/.config
+++ b/.config
@@ -5808,7 +5808,8 @@ CONFIG_PACKAGE_xinetd=m
 #
 # Sound
 #
-# CONFIG_PACKAGE_espeak is not set
+CONFIG_PACKAGE_espeak=m
+CONFIG_PACKAGE_espeak-data=m
 CONFIG_PACKAGE_faad2=m
 # CONFIG_PACKAGE_forked-daapd is not set
 CONFIG_PACKAGE_ices=m
@@ -5823,7 +5824,7 @@ CONFIG_PACKAGE_mpd-full=m
 CONFIG_PACKAGE_mpd-mini=m
 # CONFIG_PACKAGE_pianod is not set
 # CONFIG_PACKAGE_pianod-client is not set
-# CONFIG_PACKAGE_portaudio is not set
+CONFIG_PACKAGE_portaudio=m
 CONFIG_PACKAGE_pulseaudio-daemon=m
 CONFIG_PACKAGE_pulseaudio-profiles=m
 CONFIG_PACKAGE_pulseaudio-tools=m
