updating some node packages

--- a/.config
+++ b/.config
@@ -3046,6 +3046,7 @@ CONFIG_PACKAGE_libiwinfo-lua=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_lua-base64=y
 CONFIG_PACKAGE_lua-bencode=m
+# CONFIG_PACKAGE_lua-cjson is not set
 CONFIG_PACKAGE_lua-copas=m
 CONFIG_PACKAGE_lua-coxpcall=y
 CONFIG_PACKAGE_lua-examples=m
@@ -3102,11 +3103,15 @@ CONFIG_PACKAGE_node-nitrogen=m
 CONFIG_PACKAGE_node-nitrogen-cli=m
 CONFIG_PACKAGE_node-nitrogen-leveldb-store-mips=m
 CONFIG_PACKAGE_node-noble=m
+CONFIG_PACKAGE_node-node-static=m
+CONFIG_PACKAGE_node-red=m
+CONFIG_PACKAGE_node-red-node-arduino=m
 CONFIG_PACKAGE_node-reverse-wstunnel=m
 CONFIG_PACKAGE_node-serialport=m
 CONFIG_PACKAGE_node-simple-xmpp=m
 CONFIG_PACKAGE_node-socket.io=m
 CONFIG_PACKAGE_node-sqlite3=m
+CONFIG_PACKAGE_node-static=m
 CONFIG_PACKAGE_node-ws=m
 
 #
