--- a/package/linino/node-static/Makefile
+++ b/package/linino/node-static/Makefile
@@ -7,31 +7,31 @@
 
 include $(TOPDIR)/rules.mk
 
-PKG_NPM_NAME:=serialport
+PKG_NPM_NAME:=static
 PKG_NAME:=node-$(PKG_NPM_NAME)
-PKG_VERSION:=2.0.6
+PKG_VERSION:=2.0.0
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NPM_NAME)-$(PKG_VERSION).tgz
 PKG_SOURCE_URL:=http://registry.nodejitsu.com/$(PKG_NPM_NAME)/-/
-# PKG_MD5SUM:=54cc3fa9dfc7a44b5153e45b8cae9fdb
+# PKG_MD5SUM:=60e0c8577596d3f925df48ed8c5e0dc4
 
 PKG_BUILD_DEPENDS:=node
 PKG_NODE_VERSION:=0.10.38
 
 include $(INCLUDE_DIR)/package.mk
 
-define Package/node-serialport
+define Package/node-static
   DEPENDS:=+node
   SUBMENU:=Node.js
   SECTION:=lang
   CATEGORY:=Languages
-  TITLE:=Node.js package to access serial ports for reading and writing
-  URL:=https://www.npmjs.org/package/serialport
+  TITLE:=Markdown and Handlebars static site generator.
+  URL:=https://www.npmjs.org/package/static
 endef
 
-define Package/node-serialport/description
- Node.js package to access serial ports for reading and writing OR Welcome your robotic JavaScript overlords. Better yet, program them!
+define Package/node-static/description
+	Markdown and Handlebars static site generator. Transforms files with .hbs and .md with Handlebars and Markdown respectively.
 endef
 
 define Build/Prepare
@@ -40,17 +40,22 @@ define Build/Prepare
 endef
 
 define Build/Compile
-	$(MAKE_FLAGS) \
+	CC="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-gcc" \
+	CXX="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-g++" \
+	AR="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-ar" \
+	RANLIB="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-ranlib" \
+	LINK="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-g++" \
+	LD="$(TOOLCHAIN_DIR)/bin/mips-openwrt-linux-g++" \
 	PATH="/usr/bin/:$(PATH)" \
 	GYPFLAGS="-Dv8_use_mips_abi_hardfloat=false -Dv8_can_use_fpu_instructions=false" \
 	LDFLAGS="-L$(TOOLCHAIN_DIR)/lib/ -Wl,-rpath-link $(TOOLCHAIN_DIR)/lib/" \
 	npm_config_arch=mips \
 	npm_config_nodedir=$(BUILD_DIR)/node-v$(PKG_NODE_VERSION)/ \
 	PREFIX="$(PKG_INSTALL_DIR)/usr/" \
-	$(STAGING_DIR_HOST)/bin/npm install --target_arch=mips -g $(PKG_BUILD_DIR)
+	npm install --target_arch=mips -g $(PKG_BUILD_DIR)
 endef
 
-define Package/node-serialport/install
+define Package/node-static/install
 	$(INSTALL_DIR) $(1)/usr/lib/
 	
 	$(CP) $(PKG_INSTALL_DIR)/usr/lib/node_modules $(1)/usr/lib/
@@ -67,5 +72,5 @@ else
 fi
 endef
 
-$(eval $(call BuildPackage,node-serialport))
+$(eval $(call BuildPackage,node-static))
 
