adding wifi-reload script to quickly restore the AP default condition

--- a/package/linino/linino-scripts/Makefile
+++ b/package/linino/linino-scripts/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=linino-scripts
 PKG_VERSION:=1.5
-PKG_RELEASE:=3
+PKG_RELEASE:=4
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -61,6 +61,7 @@ define Package/linino-scripts/install
 	$(INSTALL_BIN) ./files/usr/bin/linup $(1)/usr/bin
 	$(INSTALL_BIN) ./files/usr/bin/change-bootloader $(1)/usr/bin
 	$(INSTALL_BIN) ./files/usr/bin/lingpio $(1)/usr/bin
+	$(INSTALL_BIN) ./files/usr/bin/wifi-reload $(1)/usr/bin
 
 	$(INSTALL_BIN) ./files/etc/init.d/rename-wifi-if-access-point $(1)/etc/init.d
 	# $(INSTALL_BIN) ./files/etc/init.d/generate_new_gpg_key $(1)/etc/init.d
