fixing revision to Arduino-OS makefile

--- a/package/linino/arduinoos/Makefile
+++ b/package/linino/arduinoos/Makefile
@@ -9,13 +9,14 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=arduinoos
 PKG_VERSION:=2.0.1
-PKG_REVISION:=166f90a
+PKG_REVISION:=2
+PKG_SRC_REVISION:=166f90a
 PKG_RELEASE:=$(PKG_REVISION)
 
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_REVISION).tar.gz
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_SRC_REVISION).tar.gz
 PKG_SOURCE_URL:=http://download.linino.org/sources
 PKG_MD5SUM:=674ab3aae480669fdee0e185a305bef1
-PKG_BUILD_DIR:=$(BUILD_DIR)/arduinoos-$(PKG_VERSION)-$(PKG_REVISION)
+PKG_BUILD_DIR:=$(BUILD_DIR)/arduinoos-$(PKG_VERSION)-$(PKG_SRC_REVISION)
 
 include $(INCLUDE_DIR)/package.mk
 
